...
        )
        button.addTarget(
            self,
            action: #selector(openWebViewVC),
            for: .touchUpInside
        )
        button.accessibilityIdentifier = "Auth"
        return button
    }()

    var delegate: AuthViewControllerDelegate?

    override func viewDidLoad() {
...
