...
    let exitButton: UIButton = {
        let button = UIButton()

        button.setImage(
            UIImage(named: "exit"), for: .normal
        )
        button.accessibilityIdentifier = "ExitButton"

        return button
    }()

    override init(frame: CGRect) {
        super.init(frame: frame)
...
