...

import WebKit

final class WebViewViewController: UIViewController {
    private let webView: WKWebView = {
        let view = WKWebView()
        view.accessibilityIdentifier = "AuthWebView"
        return view
    }()
    private let urlMaker = URLMaker.shared

    private let backButton: UIBarButtonItem = {
        let button = UIBarButtonItem()
...
